courses/430_programming-languages/assignment-6/tests/error/hw4_error23.nex
var b:none;
var i:int;
print "should not get here:n";
1 / 0;
 b = none;
 i = 2;
 if (i >= b)
 {
   print i;
 }
